# PRASHNA-AI

./: .env.example  .gitignore  README.md  implementation_plan.md.resolved  main.py  presentation.html  pyproject.toml  render-build.sh  supabase_schema.sql  test_count.py  test_eval.py
backend/: auth_utils.py  config.py  database.py  main.py  schemas.py
backend/routes/: admin.py  analytics.py  auth.py  content.py  quiz.py
backend/services/: adaptive_engine.py  ai_provider.py  content_processor.py  ml_engine.py  question_generator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css  landing.css  main.jsx
frontend/src/components/: Layout.jsx
frontend/src/pages/: Admin.jsx  Analytics.jsx  Dashboard.jsx  Generate.jsx  Landing.jsx  Login.jsx  Profile.jsx  Quiz.jsx  Register.jsx  Results.jsx  Upload.jsx
